# ntrnm

./: .gitignore  Cargo.toml  README.md  cargo.toml  default.account.json  default.config.toml
crates/ntrim/: Cargo.toml
crates/ntrim-core/: Cargo.toml  README.md  build.rs
crates/ntrim-core/protos/: qqsecurity.proto
crates/ntrim-core/protos/trpc/olpush/: comm_elem.proto  comm_msg.proto  msg_push.proto
crates/ntrim-core/protos/trpc/register/: ssoinfo_sync.proto
crates/ntrim-core/src/: bot.rs  lib.rs  reconnect.rs  refresh_session.rs
crates/ntrim-core/src/client/: mod.rs  qsec.rs  tcp.rs  trpc.rs  unipacket.rs
crates/ntrim-core/src/client/codec/: decoder.rs  encoder.rs  mod.rs
crates/ntrim-core/src/client/dispatcher/: handler.rs  mod.rs  oneshot.rs  persistent.rs
crates/ntrim-core/src/client/packet/: from_service_msg.rs  mod.rs  packet.rs  to_service_msg.rs
crates/ntrim-core/src/client/qsecurity/: mod.rs
crates/ntrim-core/src/codec/: decoder.rs  encoder.rs  mod.rs  qqsecurity.rs
crates/ntrim-core/src/commands/: mod.rs
crates/ntrim-core/src/commands/phsiglcid/: mod.rs
crates/ntrim-core/src/commands/qq_config/: mod.rs
crates/ntrim-core/src/commands/qq_config/user_dynamic_plugin/: mod.rs
crates/ntrim-core/src/commands/register/: heartbeat.rs  mod.rs
crates/ntrim-core/src/commands/register_old/: mod.rs
crates/ntrim-core/src/commands/richmedia/: request_download_rkey.rs
crates/ntrim-core/src/commands/status/: heartbeat.rs  nt_heartbeat.rs
crates/ntrim-core/src/commands/wtlogin/: mod.rs
crates/ntrim-core/src/db/: mod.rs  simple_record.rs
crates/ntrim-core/src/events/: login_event.rs  mod.rs  wtlogin_event.rs
crates/ntrim-core/src/jce/: mod.rs
crates/ntrim-core/src/packet/: from_service_msg.rs  packet.rs  to_service_msg.rs
crates/ntrim-core/src/service/rich_media/: mod.rs
crates/ntrim-core/src/servlet/: mod.rs  msg_push.rs  sync_push.rs
crates/ntrim-core/src/servlet/olpush/: mod.rs  msg.rs
crates/ntrim-core/src/servlet/register/: mod.rs
crates/ntrim-core/src/session/: device.rs  mod.rs  protocol.rs  ticket.rs
crates/ntrim-core/src/sesson/: device.rs  mod.rs  protocol.rs  ticket.rs
crates/ntrim-core/src/ticket/: mod.rs  session.rs  ticket.rs
crates/ntrim-macros/: Cargo.toml
crates/ntrim-macros/src/: lib.rs
crates/ntrim-net/: Cargo.toml
crates/ntrim-net/src/: error.rs  global.rs  lib.rs
crates/ntrim-net/src/bytes/: mod.rs
crates/ntrim-net/src/client/: mod.rs
crates/ntrim-net/src/codec/: decoder.rs  encoder.rs  mod.rs  packet.rs
crates/ntrim-net/src/crypto/: mod.rs
crates/ntrim-net/src/packet/: mod.rs  to_service_msg.rs
crates/ntrim-tools/: Cargo.toml
crates/ntrim-tools/src/: lib.rs
crates/ntrim-tools/src/bytes/: builder.rs  mod.rs  reader.rs
crates/ntrim-tools/src/cqp/: mod.rs
crates/ntrim-tools/src/crypto/: ecdh.rs  qqtea.rs
crates/ntrim-tools/src/flate2/: mod.rs
crates/ntrim-tools/src/futures/: mod.rs
crates/ntrim-tools/src/sigint/: mod.rs
crates/ntrim/src/: args.rs  config.rs  main.rs
crates/ntrim/src/login/session/: mod.rs  parser.rs  register.rs
crates/ntrim/src/qqsecurity/: dns.rs  mod.rs
ntrnm/: Cargo.toml
ntrnm_client/: Cargo.toml
ntrnm_client/src/: error.rs  global.rs
ntrnm_client/src/client/: mod.rs
ntrnm_client/src/config/: mod.rs
standard/: Enviroment.md
