[package]
name = "ntrnm"
version = "0.1.0"
edition = "2018"
authors = [
	
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = ""
repository = "https://github.com/inmes-dev/ntrnm"
documentation = "https://docs.rs/ntrnm/"
keywords = []
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "inmes-dev/ntrnm" }
is-it-maintained-open-issues = { repository = "inmes-dev/ntrnm" }

maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.2"
thiserror = "1.0.24"

[build-dependencies]
clap = "3.0.0-beta.2"

[features]
default     = ["std"]
std         = [] # support for no_std in a backwards-compatible way
debug       = [] # Enables debug messages
doc         = [] # All the features which add to documentation

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["doc"]
targets = ["x86_64-unknown-linux-gnu"]

