[package]
name = "ntrnm"
version = "0.1.0"
edition = "2021"
authors = ["fuqiuluo"]

description = "NTRNM"
repository = "https://github.com/inmes-dev/ntrnm"
documentation = "https://docs.rs/ntrnm/"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "inmes-dev/ntrnm" }
is-it-maintained-open-issues = { repository = "inmes-dev/ntrnm" }

maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0.81"
clap = "4.5.4"
thiserror = "1.0.24"

[build-dependencies]
clap = "4.5.4"

[features]
default     = ["std"]
std         = [] # support for no_std in a backwards-compatible way
debug       = [] # Enables debug messages
doc         = [] # All the features which add to documentation

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["doc"]
targets = ["x86_64-unknown-linux-gnu"]

